JLine Console REPL + more exposed JLine classes (#1912)